...
  @override
  Widget build(BuildContext context) {
    return ConstrainedBox(
      constraints: const BoxConstraints(minHeight: 84),
      child: FormBuilderCheckbox(
        key: key ?? ValueKey(_name),
        name: _name,
        title: Text(_labelText),
        decoration: InputDecoration(
          labelText: _labelText,
          contentPadding: const EdgeInsets.all(8),
        ),
        initialValue: _initialValue ?? false,
...
