...
              image: DecorationImage(image: AssetImage(ImagePaths.logo)),
            ),
            child: null,
          ),
          ListTile(
            leading: const Icon(Icons.apartment),
            title: Text(division?.name ?? 'Divisions'),
            onTap: () async {
              Navigator.of(context, rootNavigator: true).push(MaterialPageRoute(
                  builder: (context) => const DivisionListScreen()));
            },
          ),
          ListTile(
...
