...
            BottomNavigationBarItem(
              icon: Icon(Icons.home),
              label: 'Home',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.book),
              label: 'Projects',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.book),
              label: 'Members',
            ),
          ],
...
